// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codeReducer 1`] = `
Object {
  "code": "loading...",
  "error": null,
  "loading": null,
}
`;

exports[`codeReducer 2`] = `
Object {
  "foo": "bar",
  "loading": true,
}
`;

exports[`codeReducer 3`] = `
Object {
  "code": "foobar",
  "foo": "bar",
  "loading": false,
}
`;

exports[`codeReducer 4`] = `
Object {
  "error": "ups",
  "foo": "bar",
  "loading": false,
}
`;

exports[`should parse GitHub reference properly 1`] = `
Object {
  "fromLine": 0,
  "title": "src/theme/ReferenceCodeBlock/index.ts",
  "toLine": Infinity,
  "url": "https://raw.githubusercontent.com/saucelabs/docusaurus-theme-github-codeblock/main/src/theme/ReferenceCodeBlock/index.ts",
}
`;

exports[`should parse GitHub reference properly 2`] = `
Object {
  "fromLine": 104,
  "title": "src/theme/ReferenceCodeBlock/index.tsx",
  "toLine": 9,
  "url": "https://raw.githubusercontent.com/saucelabs/docusaurus-theme-github-codeblock/main/src/theme/ReferenceCodeBlock/index.tsx",
}
`;
